--- a/Public/admin/invest.html
+++ b/Public/admin/invest.html
@@ -47,6 +47,7 @@
                     $('#exit_time').val(r.msg.exit_time);
                     $('#exit_way').val(r.msg.exit_way);
                     $('#reward').val(r.msg.reward);
+                    $('#show').val(r.msg.show);
                     $('#zn_en').val(r.msg.zn_en);
                     $('#insert').text('保存');
                 }
@@ -68,6 +69,7 @@
             var exit_time = $('#exit_time').val();
             var exit_way = $('#exit_way').val();
             var reward = $('#reward').val();
+            var show = $('#show').val();
             var zn_en = $('#zn_en').val();
             $.ajax({
                 url: '/admin/invest/save',
@@ -90,6 +92,7 @@
                     "exit_time":exit_time,
                     "exit_way":exit_way,
                     "reward":reward,
+                    "show":show,
                     "zn_en":zn_en
                 },
                 success: function (r) {
@@ -120,6 +123,7 @@
             var exit_time = $('#exit_time').val();
             var exit_way = $('#exit_way').val();
             var reward = $('#reward').val();
+            var show = $('#show').val();
             var zn_en = $('#zn_en').val();
             if (button == '保存') {
                 save(this_id);
@@ -144,6 +148,7 @@
                         "exit_time":exit_time,
                         "exit_way":exit_way,
                         "reward":reward,
+                        "show":show,
                         "zn_en":zn_en
                     },
                     success: function (r) {
@@ -329,24 +334,35 @@
                         <label class="col-sm-2 control-label">地域</label>
 
                         <div class="col-sm-4">
-                            <input type="text" class="form-control" id="area" name="area">
+                            <select class="form-control" id="area">
+                                <option>中国</option>
+                                <option>美国</option>
+                            </select>
                         </div>
                         <label class="col-sm-1 control-label">行业</label>
 
                         <div class="col-sm-4">
-                            <input type="text" class="form-control" id="trade" name="trade">
+                            <select class="form-control" id="trade">
+                                <option>医疗</option>
+                                <option>消费</option>
+                                <option>高新技术</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">投资阶段</label>
 
                         <div class="col-sm-4">
-                            <input type="text" class="form-control" id="stage" name="stage">
+                            <select class="form-control" id="stage">
+                                <option>早期</option>
+                                <option>成长早期</option>
+                                <option>成长期</option>
+                            </select>
                         </div>
                         <label class="col-sm-1 control-label">投资时间</label>
 
                         <div class="col-sm-4">
-                            <input type="text" class="form-control" id="length" name="length">
+                            <input type="date" class="form-control" id="length" name="length">
                         </div>
                     </div>
                     <div class="form-group">
@@ -380,17 +396,24 @@
                         <label class="col-sm-1 control-label">退出时间</label>
 
                         <div class="col-sm-4">
-                            <input type="text" class="form-control" id="exit_time" name="exit_time">
+                            <input type="date" class="form-control" id="exit_time" name="exit_time">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">退出方式</label>
 
-                        <div class="col-sm-4">
+                        <div class="col-sm-3">
                             <input type="text" class="form-control" id="exit_way" name="exit_way">
                         </div>
+                        <label class="col-sm-1 control-label">首页展示</label>
+                        <div class="col-sm-2">
+                            <select class="form-control" id="show">
+                                <option>是</option>
+                                <option>否</option>
+                            </select>
+                        </div>
                         <label class="col-sm-1 control-label">版式</label>
-                        <div class="col-sm-4">
+                        <div class="col-sm-2">
                             <select class="form-control" id="zn_en">
                                 <option>中文</option>
                                 <option>英文</option>
