--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -88,7 +88,7 @@
         $('#top').append("<div style='text-align: right'><a href='index.html' id='index' style='text-decoration: none;color: #000'>首页</a>&nbsp;&nbsp;<a href='#' onclick='chinese()' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='#' onclick='english()' style='text-decoration: none; color: #000'>English</a>" +
         "</div><ul style='list-style: none;'><li><a href='contact.html' style='text-decoration: none;' id='contact'>联系我们</a></li>" +
         "<li><a href='news.html' style='text-decoration: none;' id='news'>新闻动态</a></li>" +
-        "<li><a href='#' style='text-decoration: none;'>投资案例</a></li>" +
+        "<li><a href='case.html' style='text-decoration: none;'>投资案例</a></li>" +
         "<li><a href='team.html' style='text-decoration: none;' id='team'>投资团队</a></li>" +
         "<li><a href='abort.html' style='text-decoration: none;' id='abort'>关于我们</a></li></ul>");
     }
@@ -101,7 +101,7 @@
         $('#top').append("<div style='text-align: right'><a href='#' onclick='chinese()' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='#' onclick='english()' style='text-decoration: none; color: #9b761d'>English</a>" +
         "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>Contact Us</a></li>" +
         "<li><a href='news.html?status=1' style='text-decoration: none;color: #9b761d' id='news'>News</a></li>" +
-        "<li><a href='#' style='text-decoration: none;'>Investment Case</a></li>" +
+        "<li><a href='case.html?status=1' style='text-decoration: none;'>Investment Case</a></li>" +
         "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>Investment Team</a></li>" +
         "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>About Us</a></li></ul>");
     }
@@ -257,7 +257,7 @@
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
                 <li><a href="news.html" style="text-decoration: none;" id="news">新闻动态</a></li>
-                <li><a href="#" style="text-decoration: none;">投资案例</a></li>
+                <li><a href="case.html" style="text-decoration: none;">投资案例</a></li>
                 <li><a href="team.html" style="text-decoration: none;" id="team">投资团队</a></li>
                 <li><a href="abort.html" style="text-decoration: none;" id="abort">关于我们</a></li>
             </ul>
