--- a/Public/admin/invest.html
+++ b/Public/admin/invest.html
@@ -345,10 +345,11 @@
                         <label class="col-sm-2 control-label">地域</label>
 
                         <div class="col-sm-4">
-                            <select class="form-control" id="area">
+                            <!--<select class="form-control" id="area">
                                 <option>中国</option>
                                 <option>美国</option>
-                            </select>
+                            </select>-->
+                            <input type="text" class="form-control" id="area">
                         </div>
                         <label class="col-sm-1 control-label">行业</label>
 
@@ -373,7 +374,7 @@
                         <label class="col-sm-1 control-label">投资时间</label>
 
                         <div class="col-sm-4">
-                            <input type="date" class="form-control" id="length" name="length">
+                            <input type="text" class="form-control" id="length" name="length">
                         </div>
                     </div>
                     <div class="form-group">
@@ -407,17 +408,18 @@
                         <label class="col-sm-1 control-label">退出时间</label>
 
                         <div class="col-sm-4">
-                            <input type="date" class="form-control" id="exit_time" name="exit_time">
+                            <input type="text" class="form-control" id="exit_time" name="exit_time">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">退出方式</label>
 
                         <div class="col-sm-4">
-                            <select class="form-control" id="exit_way">
+                            <!--<select class="form-control" id="exit_way">
                                 <option>上市</option>
                                 <option>被强生公司收购</option>
-                            </select>
+                            </select>-->
+                            <input type="text" class="form-control" id="exit_way">
                         </div>
                         <label class="col-sm-1 control-label">上市股票</label>
 
@@ -447,7 +449,7 @@
                         <label class="col-sm-2 control-label">投资收益</label>
 
                         <div class="col-sm-9">
-                            <textarea class="form-control" id="reward" name="reward"></textarea>
+                            <input type="text" class="form-control" id="reward" name="reward">
                         </div>
                     </div>
                     <div class="form-group">
