--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -99,8 +99,8 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#detail').append("<div>" +
-                        "<img style='width: 100%' src='../.." + r.msg[i].img + "'><p onclick='detail(this)'><span style='display: none'>" + r.msg[i].id + "</span>" + r.msg[i].company + "</p></div>");
+                        $('#detail').append("<div onclick='detail(this)'>" +
+                        "<img style='width: 100%' src='../.." + r.msg[i].img + "' ><p><span style='display: none'>" + r.msg[i].id + "</span>" + r.msg[i].company + "</p></div>");
                     }
                     var height = $(document.body).height();
                     $('#mask').height(height);
@@ -118,8 +118,8 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#detail').append("<div>" +
-                        "<img style='width: 100%' src='../.." + r.msg[i].img + "'><p onclick='detail(this)'><span style='display: none'>" + r.msg[i].id + "</span>" + r.msg[i].company + "</p></div>");
+                        $('#detail').append("<div onclick='detail(this)'>" +
+                        "<img style='width: 100%' src='../.." + r.msg[i].img + "'><p><span style='display: none'>" + r.msg[i].id + "</span>" + r.msg[i].company + "</p></div>");
                     }
                     var height = $(document.body).height();
                     $('#mask').height(height);
@@ -168,7 +168,7 @@
     function detail(id) {
         $('#invest').css('display', 'block');
         $('#mask').css('display', 'block');
-        var id = $(id).children('span').text();
+        var id = $(id).children('p').children('span').text();
         $.ajax({
             url: '/home/index/case_detail',
             data: {
@@ -177,13 +177,14 @@
             dataType: 'json',
             success: function (r) {
                 $('#invest_img').attr('src', r.msg.img);
-                $('#invest_name').text(r.msg.company);
+                $('#invest_name').text(r.msg.company_all);
                 $('#invest_stage').text(r.msg.stage);
                 $('#invest_time').text(r.msg.length);
                 $('#invest_stock').text(r.msg.stock);
                 $('#invest_exit_time').text(r.msg.exit_time);
                 $('#invest_exit_way').text(r.msg.exit_way);
                 $('#invest_web').text(r.msg.web);
+                $('#invest_web').attr('href',r.msg.web);
                 $('#invest_reward').text(r.msg.reward);
                 $('#invest_addr').text(r.msg.addr);
                 $('#up_stock').text(r.msg.up_stock);
@@ -619,7 +620,7 @@
             <div class="col-lg-6" style="text-align:center;margin-top: 50px">
                 <img id="invest_img" style="margin: -10px auto; width: 75%"/>
             </div>
-            <div class="col-lg-6" style="padding: 0;margin-top:10px;height:330px;overflow-y: scroll;width: 47.4% !important;  ">
+            <div class="col-lg-6" style="padding: 0;margin-top:10px;height:330px;overflow: auto;width: 47.4% !important;  ">
                 <div class="col-lg-12" style="font-size: 16px;">投资阶段：<span id="invest_stage"></span></div>
                 <div class="col-lg-11" style="font-size: 16px;">投资时间：<span id="invest_time"></span></div>
                 <div class="col-lg-11 exit" style="font-size: 16px;">退出时间：<span id="invest_exit_time"></span></div>
@@ -627,7 +628,7 @@
                 <div class="col-lg-11 exit" style="font-size: 16px;">投资收益：<span id="invest_reward"></span></div>
                 <div class="col-lg-11 exit addr" style="font-size: 16px;">上市地点：<span id="invest_addr"></span></div>
                 <div class="col-lg-11 exit up_stock" style="font-size: 16px;">上市股票：<span id="up_stock"></span></div>
-                <div class="col-lg-11" style="font-size: 16px;">公司网站：<span id="invest_web"></span></div>
+                <div class="col-lg-11" style="font-size: 16px;">公司网站：<a href="" id="invest_web"></a></div>
                 <div class="col-lg-11 exit" style="font-size: 16px;">香港联交所交易代码：<span id="invest_stock"></span></div>
                 <div class="col-lg-11" id="invest_intro" style="font-size: 16px;"></div>
             </div>
