--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -184,7 +184,7 @@
                 $('#invest_exit_time').text(r.msg.exit_time);
                 $('#invest_exit_way').text(r.msg.exit_way);
                 $('#invest_web').text(r.msg.web);
-                $('#invest_web').attr('href',r.msg.web);
+                $('#invest_web').attr('href',"https://"+r.msg.web);
                 $('#invest_reward').text(r.msg.reward);
                 $('#invest_addr').text(r.msg.addr);
                 $('#up_stock').text(r.msg.up_stock);
@@ -484,7 +484,7 @@
 </style>
 <body>
 <div id="mask"
-     style="margin-top: -10px;position: absolute;z-index: 3;background-color: #7f7f7f;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;"></div>
+     style="margin-top: -10px;position: absolute;z-index: 3;background-color: #000;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;"></div>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
     <div class="row">
         <div class="col-lg-4">
