--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -40,14 +40,14 @@
         border-radius: 15px;
         width: 160px;
         transform: rotate(45deg);
-        -ms-transform: rotate(45deg); /* IE 9 */
-        -moz-transform: rotate(45deg); /* Firefox */
-        -webkit-transform: rotate(45deg); /* Safari 和 Chrome */
+        -ms-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
         -o-transform: rotate(45deg);
         overflow: hidden;
         margin-left: 65px;
         float: left;
-        margin-top: -30px;;
+        margin-top: -30px;
     }
 
     .picture:hover {
@@ -57,9 +57,9 @@
     .picture > img {
         max-width: 100%;
         transform: rotate(-45deg) scale(1.42);
-        -ms-transform: rotate(-45deg) scale(1.42); /* IE 9 */
-        -moz-transform: rotate(-45deg) scale(1.42); /* Firefox */
-        -webkit-transform: rotate(-45deg) scale(1.42); /* Safari 和 Chrome */
+        -ms-transform: rotate(-45deg) scale(1.42);
+        -moz-transform: rotate(-45deg) scale(1.42);
+        -webkit-transform: rotate(-45deg) scale(1.42);
         -o-transform: rotate(-45deg) scale(1.42);
     }
 
@@ -103,19 +103,42 @@
     }
 
     .no_shade p {
-        margin-left: 78px;
         margin-top: -10px;
-        width: 50px;
+        width: 130%;
         color: #fff;
         text-align: center;
     }
 
     #hr {
-        margin-left: 88px;
         width: 30px;
         margin-top: 3px;
         border-top: 1px solid;
         height: 10px;
+    }
+
+    .new {
+        width: 95%;
+        position: absolute;
+        z-index: 10;
+        background-color: #525c75;
+        opacity: 0.8;
+        -webkit-opacity: 0.8;
+        overflow: hidden;
+        display: none;
+        margin-left: 2.5%;
+    }
+
+    .col-lg-4 img {
+        box-shadow: 5px 5px 6px #999;
+    }
+
+    .new:hover {
+        cursor: pointer;
+    }
+
+    .new p {
+        width: 100% !important;
+        color: #fff;
     }
 </style>
 <script>
@@ -167,42 +190,72 @@
             "dataType": 'json',
             success: function (r) {
                 var len = r.msg.length;
-                var group = Math.ceil(len / 7);
-                var n = 0;
-                var m = 7;
-                for (var j = 0; j < group; j++) {
-                    $('#imgs').append("<div class='row' style='width:940px;' id='" + j + "'></div>");
+                for (var i = 0; i < len; i++) {
+                    $('#imgs').append("<div class='col-lg-4' onmouseover='show(this)' onmouseout='hide(this)' onclick='detail(this)' style='padding:0;margin-top: 10px;;text-align:center;height: 180px'>" +
+                    "<div class='new'><p style='display: none'>" + r.msg[i].id + "</p>" +
+                    "<p style='margin-top: 80px;' id='name'>" + r.msg[i].name + "</p>" +
+                    "<p id='english'>" + r.msg[i].english + "</p><p id='hr' style='width: 20% !important;margin-left: 40%'></p>" +
+                    "<p id='position'>" + r.msg[i].position + "</p></div>" +
+                    "<img src='../.." + r.msg[i].img + "' style='width:95%;height:180px;'></div>");
                 }
-                for (var i = 0; i < group; i++) {
-                    if (m > len) {
-                        m = len;
-                    }
-                    for (var k = n; k < m; k++) {
-                        if (k % 7 == 0) {
-                            $('#' + i).append("<div class='space'></div>");
-                        }
-                        $('#' + i).append("<div class='picture' onmouseout='hide(this)'  onmouseover='show(this)'><div class='shade'><div class='no_shade'><p style='margin-top: 80px;' id='name'>" + r.msg[k].name + "</p><p id='english'>" + r.msg[k].english + "</p><p id='hr'></p><p id='position'>" + r.msg[k].position + "</p></div></div><img src='../.." + r.msg[k].img + "'></div>");
-                    }
-                    m = m + 7;
-                    n = n + 7;
-                }
+                var height = $(document.body).height();
+                $('#mask').height(height);
+                /*var len = r.msg.length;
+                 var group = Math.ceil(len / 7);
+                 var n = 0;
+                 var m = 7;
+                 for (var j = 0; j < group; j++) {
+                 $('#imgs').append("<div class='row' style='width:940px;' id='" + j + "'></div>");
+                 }
+                 for (var i = 0; i < group; i++) {
+                 if (m > len) {
+                 m = len;
+                 }
+                 for (var k = n; k < m; k++) {
+                 if (k % 7 == 0) {
+                 $('#' + i).append("<div class='space'></div>");
+                 }
+                 $('#' + i).append("<div class='picture' onmouseout='hide(this)'  onmouseover='show(this)'><div class='shade'><div class='no_shade'><p style='margin-top: 80px;' id='name'>" + r.msg[k].name + "</p><p id='english'>" + r.msg[k].english + "</p><p id='hr'></p><p id='position'>" + r.msg[k].position + "</p></div></div><img src='../.." + r.msg[k].img + "'></div>");
+                 }
+                 m = m + 7;
+                 n = n + 7;
+                 }*/
             }
         });
     });
     function show(id) {
-        $(id).find('.shade').css('display', 'block');
+        $(id).find('.new').css('display', 'block');
     }
 
     function hide(id) {
-        $(id).find('.shade').css('display', 'none');
+        $(id).find('.new').css('display', 'none');
     }
-    function home(){
+    function home() {
         var aQuery = window.location.href;  //取得Get参数
-        if(aQuery.indexOf("status")>0){
-            window.location.href='index.html?status=1';
-        }else{
-            window.location.href='index.html';
+        if (aQuery.indexOf("status") > 0) {
+            window.location.href = 'index.html?status=1';
+        } else {
+            window.location.href = 'index.html';
         }
+    }
+    function detail(e) {
+        $('#detail').css('display', 'block');
+        $('#mask').css('display', 'block');
+        var id = $(e).children('.new').children('p').first().text();
+        $.ajax({
+            url: '/home/index/member_detail',
+            data: {
+                id: id
+            },
+            dataType: 'json',
+            success: function (r) {
+                $('#member_img').attr('src', '../..' + r.msg.img);
+                $('#name').text(r.msg.name);
+                $('#en_name').text(r.msg.english);
+                $('#position').text(r.msg.position);
+                $('#intro').text(r.msg.intro);
+            }
+        });
     }
 </script>
 <style>
@@ -317,8 +370,51 @@
     .col-lg-offset-1 {
         margin-left: 8.33333333%
     }
+
+    #detail {
+        width: 75%;
+        position: fixed;
+        z-index: 11;
+        margin-left: 17%;
+        width: 67.5%;
+        background-color: #FFFFFF;
+        border-radius: 3px;
+        height: 400px;
+        margin-top: -250px;
+        display: none;
+    }
+
+    #detail img:hover {
+        cursor: pointer;
+    }
+
+    #name, #en_name, #position, #intro {
+        font-family: "Microsoft YaHei", sans-serif;
+
+    }
+
+    /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
+    ::-webkit-scrollbar {
+        width: 4px;
+    }
+
+    /*定义滚动条轨道 内阴影+圆角*/
+    ::-webkit-scrollbar-track {
+        border-radius: 10px;
+        background-color: #cccccc;
+    }
+
+    /*定义滑块 内阴影+圆角*/
+    ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: #b0a065;
+    }
+
 </style>
 <body>
+<div id="mask"
+     style="margin-top: -10px;position: absolute;z-index: 10;background-color: #000;width: 100%;opacity:0.5;-webkit-opacity:0.5;display: none;">
+</div>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
     <div class="row">
         <div class="col-lg-4">
@@ -354,15 +450,46 @@
         </div>
     </div>
 </div>
-<div class="container" style="width: 70%;margin-left: 15%;margin-top: 100px;" id="imgs">
+<div id="detail">
+    <img style="margin-left: 96%;margin-top: 15px;" src="images/off.jpg"
+         onclick="javascript:$('#detail').css('display','none');$('#mask').css('display','none')">
 
+    <div class="col-lg-6" style="text-align:center;margin-top: 10px;">
+        <div style="height: 18px;width: 80px;background-color: #e7e2d0;margin-left: 20px;"></div>
+        <div style="height: 62px;width: 18px;background-color: #e7e2d0;margin-left: 20px;float: left"></div>
+        <img id="member_img" style="margin: 0 auto; width: 80%;height: 250px; float: left"/>
+        <div style="height: 124px;width: 12px;background-color: #f3f1e8;float: left;margin-top: 126px;"></div>
+        <div style="height: 12px;width: 136px;background-color: #f3f1e8;margin-top: 250px;margin-left:57.9% ;"></div>
+    </div>
+    <div class="col-lg-6" style="padding: 0;margin-top:0px;width: 47.4% !important;  ">
+        <div class="col-lg-11" style="text-align: center"><span id="name"
+                                                                style="font-size: 24px;color: #4c4c4c;"></span></div>
+        <div style="overflow: auto;height:300px;padding: 0;width: 100%;">
+            <div class="col-lg-11" style="text-align: center"><span id="en_name"
+                                                                    style="font-size: 14px;color: #4c4c4c;"></span>
+            </div>
+            <div class="col-lg-11 exit" style="text-align: center;margin-top: 15px;"><span id="position"
+                                                                                           style="font-size: 16px;color: #4c4c4c;"></span>
+            </div>
+            <div class="col-lg-1 col-lg-offset-5"
+                 style="margin-top: 15px;width:5% !important;border: 2px #b0a065 solid;border-radius: 3px;"></div>
+            <div class="col-lg-11" id="intro" style="margin-top:15px;font-size: 16px !important;color: #4c4c4c;"></div>
+        </div>
+    </div>
+</div>
+</div>
+<div class="container" style="width: 70%;margin-left: 15%;margin-top: 20px;">
+    <div class="row" id="imgs">
+
+    </div>
 </div>
 <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75">
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;font-family: 'Microsoft YaHei';font-size: 12px;">
-            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html"
-                                                                         style="text-decoration: none;color: #fff">法律说明</a>
+            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                href="law.html"
+                style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
 </div>
