--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -126,6 +126,7 @@
         overflow: hidden;
         display: none;
         margin-left: 2.5%;
+        height: 200px;
     }
 
     .col-lg-4 img {
@@ -191,12 +192,12 @@
             success: function (r) {
                 var len = r.msg.length;
                 for (var i = 0; i < len; i++) {
-                    $('#imgs').append("<div class='col-lg-4' onmouseover='show(this)' onmouseout='hide(this)' onclick='detail(this)' style='padding:0;margin-top: 10px;;text-align:center;height: 180px'>" +
+                    $('#imgs').append("<div class='col-lg-4' onmouseover='show(this)' onmouseout='hide(this)' onclick='detail(this)' style='padding:0;margin-top: 10px;text-align:center;height: 200px'>" +
                     "<div class='new'><p style='display: none'>" + r.msg[i].id + "</p>" +
                     "<p style='margin-top: 80px;' id='name'>" + r.msg[i].name + "</p>" +
                     "<p id='english'>" + r.msg[i].english + "</p><p id='hr' style='width: 20% !important;margin-left: 40%'></p>" +
                     "<p id='position'>" + r.msg[i].position + "</p></div>" +
-                    "<img src='../.." + r.msg[i].img + "' style='width:95%;height:180px;'></div>");
+                    "<img src='../.." + r.msg[i].img + "' style='width:95%;height:200px;'></div>");
                 }
                 var height = $(document.body).height();
                 $('#mask').height(height);
@@ -459,7 +460,7 @@
         <div style="height: 62px;width: 18px;background-color: #e7e2d0;margin-left: 20px;float: left"></div>
         <img id="member_img" style="margin: 0 auto; width: 80%;height: 250px; float: left"/>
         <div style="height: 124px;width: 12px;background-color: #f3f1e8;float: left;margin-top: 126px;"></div>
-        <div style="height: 12px;width: 136px;background-color: #f3f1e8;margin-top: 250px;margin-left:57.9% ;"></div>
+        <div style="height: 12px;width: 136px;background-color: #f3f1e8;margin-top: 250px;margin-left:223px;"></div>
     </div>
     <div class="col-lg-6" style="padding: 0;margin-top:0px;width: 47.4% !important;  ">
         <div class="col-lg-11" style="text-align: center"><span id="name"
