--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -616,7 +616,7 @@
                  style="padding: 0;font-size: 24px;font-family: 'Microsoft YaHei';color: #4c4c4c">
 
             </div>
-            <div class="col-lg-1 col-lg-offset-6" style="margin-top: 15px;width:5% !important;border: 2px #b0a065 solid;border-radius: 3px;"></div>
+            <div class=" col-lg-offset-6" style="position: relative;float: left;margin-top: 15px;width:25px !important;border: 2px #b0a065 solid;border-radius: 3px;"></div>
             <div class="col-lg-6" style="text-align:center;margin-top: 50px">
                 <img id="invest_img" style="margin: -10px auto; width: 75%"/>
             </div>
