--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -129,7 +129,7 @@
         height: 200px;
     }
 
-    .imgs .col-lg-4 img {
+    #imgs .col-lg-4 img {
         box-shadow: 5px 5px 6px #999;
     }
 
