--- a/Public/admin/menu.html
+++ b/Public/admin/menu.html
@@ -224,42 +224,12 @@
                                 class="fa fa-angle-double-left toggle-left"></i>
                         </button>
                     </li>
-                    <!--<li class="submenu">
+                    <li class="submenu">
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
                                 class="hidden-minibar">  首页管理 <span class="badge bg-primary pull-right">1</span></a>
                         <ul>
                             <li><a href="index.html" data-original-title="Basic"><i
                                     class="fa fa-table"></i><span> 内容管理</span></a>
-                            </li>
-                        </ul>
-                    </li>-->
-                    <li class="submenu">
-                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar"> 团队管理 <span class="badge bg-primary pull-right">2</span></a>
-                        <ul>
-                            <li><a href="team.html" data-original-title="Basic"><i
-                                    class="fa fa-table"></i><span>  团队简介</span></a>
-                            </li>
-                            <li><a href="member.html" data-original-title="Editable"><i
-                                    class="fa fa-table"></i><span>  人员管理</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="submenu">
-                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar">  麦星投资 <span class="badge bg-primary pull-right">1</span></a>
-                        <ul>
-                            <li><a href="invest.html" data-original-title="Basic"><i
-                                    class="fa fa-table"></i><span> 投资管理</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="submenu">
-                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar">  新闻管理 <span class="badge bg-primary pull-right">1</span></a>
-                        <ul>
-                            <li><a href="news.html" data-original-title="Basic"><i
-                                    class="fa fa-table"></i><span>  内容管理</span></a>
                             </li>
                         </ul>
                     </li>
@@ -272,6 +242,36 @@
                             </li>
                             <li><a href="menu.html" data-original-title="Editable"><i
                                     class="fa fa-table"></i><span>  菜单管理</span></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="submenu">
+                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
+                                class="hidden-minibar"> 投资团队 <span class="badge bg-primary pull-right">2</span></a>
+                        <ul>
+                            <li><a href="team.html" data-original-title="Basic"><i
+                                    class="fa fa-table"></i><span>  团队简介</span></a>
+                            </li>
+                            <li><a href="member.html" data-original-title="Editable"><i
+                                    class="fa fa-table"></i><span>  人员管理</span></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="submenu">
+                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
+                                class="hidden-minibar">  投资案例 <span class="badge bg-primary pull-right">1</span></a>
+                        <ul>
+                            <li><a href="invest.html" data-original-title="Basic"><i
+                                    class="fa fa-table"></i><span> 投资管理</span></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="submenu">
+                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
+                                class="hidden-minibar">  新闻动态 <span class="badge bg-primary pull-right">1</span></a>
+                        <ul>
+                            <li><a href="news.html" data-original-title="Basic"><i
+                                    class="fa fa-table"></i><span>  内容管理</span></a>
                             </li>
                         </ul>
                     </li>
