--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -79,14 +79,14 @@
                         "<div class='hidden'>" + r.msg[i].city + "</div>" +
                         "<div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[i].img + "'>" +
                         "</div>" +
-                        "<div class='col-lg-5 col-lg-offset-1 contact'style='padding-left: 50px;margin-top: 30px'><p class='company'>" + r.msg[i].company + "</p><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><span>地址：</span>" + r.msg[i].add + "</p>" +
+                        "<div class='col-lg-5 col-lg-offset-1 contact'style='padding-left: 50px;margin-top: 30px'><p><span>Tel：</span>" + r.msg[i].tel + "</p><p><span>Fax：</span>" + r.msg[i].fax + "</p><p><span>E-mail：</span>" + r.msg[i].email + "</p><p><span>Addr：</span>" + r.msg[i].add + "</p>" +
                         "</div>" +
                         "</div>");
                     }
                     $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
                     $('#city_one').append("<div class='row'><div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-5 col-lg-offset-1 contact' style='padding-left: 50px;margin-top: 30px;'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
+                    "<div class='col-lg-5 col-lg-offset-1 contact' style='padding-left: 50px;margin-top: 30px;'><p><span>Tel：</span>" + r.msg[0].tel + "</p><p><span>Fax：</span>" + r.msg[0].fax + "</p><p><span>E-mail：</span>" + r.msg[0].email + "</p><p><span>Addr：</span>" + r.msg[0].add + "</p>" +
                     "</div>" +
                     "</div>");
                     if (r.msg[0].agent == 1) {
@@ -107,14 +107,14 @@
                         "<div class='hidden'>" + r.msg[i].city + "</div>" +
                         "<div class='col-lg-5 col-lg-offset-1'><img style='width: 100%' src='../.." + r.msg[i].img + "'>" +
                         "</div>" +
-                        "<div class='col-lg-5  contact' style='padding-left: 50px;margin-top: 30px'><p class='company'>" + r.msg[i].company + "</p><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><span>地址：</span>" + r.msg[i].add + "</p>" +
+                        "<div class='col-lg-5  contact' style='padding-left: 50px;margin-top: 30px'><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><span>地址：</span>" + r.msg[i].add + "</p>" +
                         "</div>" +
                         "</div>");
                     }
                     $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
                     $('#city_one').append("<div class='row'><div class='col-lg-5 col-lg-offset-1'><img style='width: 100%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-5  contact'style='padding-left: 50px;margin-top: 30px'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
+                    "<div class='col-lg-5  contact'style='padding-left: 50px;margin-top: 30px'><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
                     "</div>" +
                     "</div>");
                     if (r.msg[0].agent == 1) {
