--- a/Public/admin/contact.html
+++ b/Public/admin/contact.html
@@ -186,42 +186,12 @@
                                 class="fa fa-angle-double-left toggle-left"></i>
                         </button>
                     </li>
-                    <!--<li class="submenu">
+                    <li class="submenu">
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
                                 class="hidden-minibar">  首页管理 <span class="badge bg-primary pull-right">1</span></a>
                         <ul>
                             <li><a href="index.html" data-original-title="Basic"><i
                                     class="fa fa-table"></i><span> 内容管理</span></a>
-                            </li>
-                        </ul>
-                    </li>-->
-                    <li class="submenu">
-                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar"> 团队管理 <span class="badge bg-primary pull-right">2</span></a>
-                        <ul>
-                            <li><a href="team.html" data-original-title="Basic"><i
-                                    class="fa fa-table"></i><span>  团队简介</span></a>
-                            </li>
-                            <li><a href="member.html" data-original-title="Editable"><i
-                                    class="fa fa-table"></i><span>  人员管理</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="submenu">
-                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar">  麦星投资 <span class="badge bg-primary pull-right">1</span></a>
-                        <ul>
-                            <li><a href="invest.html" data-original-title="Basic"><i
-                                    class="fa fa-table"></i><span> 投资管理</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="submenu">
-                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar">  新闻管理 <span class="badge bg-primary pull-right">1</span></a>
-                        <ul>
-                            <li><a href="news.html" data-original-title="Basic"><i
-                                    class="fa fa-table"></i><span>  内容管理</span></a>
                             </li>
                         </ul>
                     </li>
@@ -234,6 +204,36 @@
                             </li>
                             <li><a href="menu.html" data-original-title="Editable"><i
                                     class="fa fa-table"></i><span>  菜单管理</span></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="submenu">
+                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
+                                class="hidden-minibar"> 投资团队 <span class="badge bg-primary pull-right">2</span></a>
+                        <ul>
+                            <li><a href="team.html" data-original-title="Basic"><i
+                                    class="fa fa-table"></i><span>  团队简介</span></a>
+                            </li>
+                            <li><a href="member.html" data-original-title="Editable"><i
+                                    class="fa fa-table"></i><span>  人员管理</span></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="submenu">
+                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
+                                class="hidden-minibar">  投资案例 <span class="badge bg-primary pull-right">1</span></a>
+                        <ul>
+                            <li><a href="invest.html" data-original-title="Basic"><i
+                                    class="fa fa-table"></i><span> 投资管理</span></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="submenu">
+                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
+                                class="hidden-minibar">  新闻动态 <span class="badge bg-primary pull-right">1</span></a>
+                        <ul>
+                            <li><a href="news.html" data-original-title="Basic"><i
+                                    class="fa fa-table"></i><span>  内容管理</span></a>
                             </li>
                         </ul>
                     </li>
@@ -312,14 +312,15 @@
                         </div>
                         <label for="img" class="col-sm-1 control-label">城市</label>
                         <div class="col-sm-2">
-                            <select class="form-control" id="city" name="city">
+                            <input type="text" class="form-control" id="city" name="city">
+                            <!--<select class="form-control" id="city" name="city">
                                 <option>北京</option>
                                 <option>BeiJing</option>
                                 <option>深圳</option>
                                 <option>ShenZhen</option>
                                 <option>香港</option>
                                 <option>HongKong</option>
-                            </select>
+                            </select>-->
                         </div>
                     </div>
                     <div class="form-group">
