--- a/Public/admin/index.html
+++ b/Public/admin/index.html
@@ -190,7 +190,19 @@
                     </li>
                     <li class="submenu">
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar"> 团队管理 <span class="badge bg-primary pull-right">2</span></a>
+                                class="hidden-minibar">  关于我们 <span class="badge bg-primary pull-right">2</span></a>
+                        <ul>
+                            <li><a href="abort.html" data-original-title="Basic"><i
+                                    class="fa fa-table"></i><span>  麦星寄语</span></a>
+                            </li>
+                            <li><a href="menu.html" data-original-title="Editable"><i
+                                    class="fa fa-table"></i><span>  菜单管理</span></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="submenu">
+                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
+                                class="hidden-minibar"> 投资团队 <span class="badge bg-primary pull-right">2</span></a>
                         <ul>
                             <li><a href="team.html" data-original-title="Basic"><i
                                     class="fa fa-table"></i><span>  团队简介</span></a>
@@ -202,7 +214,7 @@
                     </li>
                     <li class="submenu">
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar">  麦星投资 <span class="badge bg-primary pull-right">1</span></a>
+                                class="hidden-minibar">  投资案例 <span class="badge bg-primary pull-right">1</span></a>
                         <ul>
                             <li><a href="invest.html" data-original-title="Basic"><i
                                     class="fa fa-table"></i><span> 投资管理</span></a>
@@ -211,22 +223,10 @@
                     </li>
                     <li class="submenu">
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar">  新闻管理 <span class="badge bg-primary pull-right">1</span></a>
+                                class="hidden-minibar">  新闻动态 <span class="badge bg-primary pull-right">1</span></a>
                         <ul>
                             <li><a href="news.html" data-original-title="Basic"><i
                                     class="fa fa-table"></i><span>  内容管理</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="submenu">
-                        <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
-                                class="hidden-minibar">  关于我们 <span class="badge bg-primary pull-right">2</span></a>
-                        <ul>
-                            <li><a href="abort.html" data-original-title="Basic"><i
-                                    class="fa fa-table"></i><span>  麦星寄语</span></a>
-                            </li>
-                            <li><a href="menu.html" data-original-title="Editable"><i
-                                    class="fa fa-table"></i><span>  菜单管理</span></a>
                             </li>
                         </ul>
                     </li>
