--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -555,7 +555,7 @@
 
             <div class='menu menu_cn' id="industry" onclick="index(0)" style='width: 180px;'>
                 <span>按行业</span>
-                <br><span style='font-size: 12px'>Industry</span>
+                <!--<br><span style='font-size: 12px'>Industry</span>-->
             </div>
             <div id="industry_two" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
@@ -573,7 +573,7 @@
             </div>
             <div class='menu menu_cn' id="area" onclick="index(0)" style='width: 180px;'>
                 <span>按地域</span>
-                <br><span style='font-size: 12px'>Area</span>
+                <!--<br><span style='font-size: 12px'>Area</span>-->
             </div>
             <div id="area_two" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
@@ -587,7 +587,7 @@
             </div>
             <div class='menu menu_cn' id="stage" onclick="index(0)" style='width: 180px;'>
                 <span>按阶段</span>
-                <br><span style='font-size: 12px'>Stage</span>
+                <!--<br><span style='font-size: 12px'>Stage</span>-->
             </div>
             <div id="stage_two" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
