--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -130,7 +130,7 @@
     }
 
     #imgs .col-lg-4 img {
-        box-shadow: 5px 5px 6px #999;
+        box-shadow: 0px 3px 6px #999;
     }
 
     .new:hover {
@@ -197,7 +197,7 @@
                     "<p style='margin-top: 80px;' id='name'>" + r.msg[i].name + "</p>" +
                     "<p id='english'>" + r.msg[i].english + "</p><p id='hr' style='width: 20% !important;margin-left: 40%'></p>" +
                     "<p id='position'>" + r.msg[i].position + "</p></div>" +
-                    "<img src='../.." + r.msg[i].img + "' style='width:95%;height:200px;'></div>");
+                    "<img src='../.." + r.msg[i].img + "' style='width:273px;height:200px;'></div>");
                 }
                 var height = $(document.body).height();
                 $('#mask').height(height);
