--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -560,15 +560,15 @@
             <div id="industry_two" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>医疗</span>
-                    <br><span style='font-size: 12px'>Medical care</span>
+                    <!--<br><span style='font-size: 12px'>Medical care</span>-->
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>消费</span>
-                    <br><span style='font-size: 12px'>Consumption</span>
+                    <!--<br><span style='font-size: 12px'>Consumption</span>-->
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>高新技术</span>
-                    <br><span style='font-size: 12px'>Hign technology</span>
+                    <!--<br><span style='font-size: 12px'>Hign technology</span>-->
                 </div>
             </div>
             <div class='menu menu_cn' id="area" onclick="index(0)" style='width: 180px;'>
@@ -578,11 +578,11 @@
             <div id="area_two" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>中国</span>
-                    <br><span style='font-size: 12px'>China</span>
+                    <!--<br><span style='font-size: 12px'>China</span>-->
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>美国</span>
-                    <br><span style='font-size: 12px'>America</span>
+                    <!--<br><span style='font-size: 12px'>America</span>-->
                 </div>
             </div>
             <div class='menu menu_cn' id="stage" onclick="index(0)" style='width: 180px;'>
@@ -592,15 +592,15 @@
             <div id="stage_two" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>早期</span>
-                    <br><span style='font-size: 12px'>Early stage</span>
+                    <!--<br><span style='font-size: 12px'>Early stage</span>-->
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>成长早期</span>
-                    <br><span style='font-size: 12px'>Early growth</span>
+                    <!--<br><span style='font-size: 12px'>Early growth</span>-->
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>成长期</span>
-                    <br><span style='font-size: 12px'>Growth</span>
+                    <!--<br><span style='font-size: 12px'>Growth</span>-->
                 </div>
             </div>
             <div class='menu menu_en' id="industry_en" onclick="index(1)" style='width: 180px;'>
@@ -655,7 +655,7 @@
 
             </div>
             <div class=" col-lg-offset-6"
-                 style="position: relative;float: left;margin-top: 15px;width:25px !important;border: 2px #b0a065 solid;border-radius: 3px;"></div>
+                 style="position: relative;float: left;margin-top: 15px;width:30px !important;border: 2px #b0a065 solid;border-radius: 3px;"></div>
             <div class="col-lg-6" style="text-align:center;margin-top: 50px">
                 <img id="invest_img" style="margin: -10px auto; width: 75%"/>
             </div>
