--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -150,6 +150,10 @@
     textarea{
         height: 200px !important;
     }
+
+    pre{
+        padding: 0;
+    }
 </style>
 <body>
 <div class="site-holder">
@@ -278,8 +282,8 @@
                         <label for="position" class="col-sm-1 control-label">简介</label>
 
                         <div class="col-sm-10">
-                            <textarea class="form-control" id="intro" name="intro">
-                            </textarea>
+                            <pre><textarea class="form-control" id="intro" name="intro">
+                            </textarea></pre>
                         </div>
                     </div>
                     <div class="form-group">
