--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -141,6 +141,9 @@
         width: 100% !important;
         color: #fff;
     }
+
+    pre{background-color: #ffffff;border: 0;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei', sans-serif}
+
 </style>
 <script>
     $(function () {
@@ -192,12 +195,12 @@
             success: function (r) {
                 var len = r.msg.length;
                 for (var i = 0; i < len; i++) {
-                    $('#imgs').append("<div class='col-lg-4' onmouseover='show(this)' onmouseout='hide(this)' onclick='detail(this)' style='padding:0;margin-top: 10px;text-align:center;height: 200px'>" +
+                    $('#imgs').append("<div class='col-lg-4' onmouseover='show(this)' onmouseout='hide(this)' onclick='detail(this)' style='padding:0;width:280px !important;margin-top: 10px;text-align:center;height: 200px'>" +
                     "<div class='new'><p style='display: none'>" + r.msg[i].id + "</p>" +
                     "<p style='margin-top: 80px;' id='name'>" + r.msg[i].name + "</p>" +
                     "<p id='english'>" + r.msg[i].english + "</p><p id='hr' style='width: 20% !important;margin-left: 40%'></p>" +
                     "<p id='position'>" + r.msg[i].position + "</p></div>" +
-                    "<img src='../.." + r.msg[i].img + "' style='width:300px;height:200px;'></div>");
+                    "<img src='../.." + r.msg[i].img + "' style='width:95%;height:200px;'></div>");
                 }
                 var height = $(document.body).height();
                 $('#mask').height(height);
@@ -250,11 +253,12 @@
             },
             dataType: 'json',
             success: function (r) {
+                var intro='<pre>'+r.msg.intro+'</pre>';
                 $('#member_img').attr('src', '../..' + r.msg.img);
                 $('#name').text(r.msg.name);
                 $('#en_name').text(r.msg.english);
                 $('#position').text(r.msg.position);
-                $('#intro').text(r.msg.intro);
+                $('#intro').html(intro);
             }
         });
     }
